# adbtool

./: .env  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  adbdevice.py  adbpush.bat  adbpush.py  apkinstall.py  cmd.py  pyproject.toml  requirements.txt  setup.py  testtqdm.py  vivo_X21A_a394c43f.json
.github/workflows/: main.yml  pythonpublish.yml
adbtool/: adbdevice.py  adbpush.py  adbtool.py  apkinfo.py  apkinstall.py  cmd.py  config.py  errors.py
adbtool/subcommands/: adb.py  adbdevice.py  adbpull.py  adbpush.py  apkinfo.py  apkinstall.py  apksigner.py  apkuninstall.py  assetbundleinfo.py  asshader.py  il2cpp.py  malioc.py  pagesize.py  procfd.py
scripts/: install_python36.sh  lint_check_python3.sh
test/: adbtooltest.apk
tests/: config.yml  test_apk.py  test_cmd.py  test_devices.py  test_globaloptions.py  test_install.py
